[gd_scene load_steps=4 format=1]

[ext_resource path="res://Assets/PlayerCharacter/PlayerCharacter.gd" type="Script" id=1]
[ext_resource path="res://Assets/PlayerCharacter/PlayerCam.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 1, 1, 1 )

[node name="PlayerBase" type="Node"]

[node name="Player" type="RigidBody" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.29241, -3.72703 )
input/ray_pickable = true
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.421337, 0.015138 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = false
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
axis_lock = 0
velocity/linear = Vector3( 0, 0, 0 )
velocity/angular = Vector3( 0, 0, 0 )
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )
moveSpeed = null
JumpHeight = null
MouseSensitivity = null
parent_path = null
self_path = null

[node name="TestCube" type="TestCube" parent="Player"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.413474, 0.043702 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="CollisionShape" type="CollisionShape" parent="Player"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.421337, 0.015138 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Camera" type="Camera" parent="Player"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 0.921968, 0.387266, 0, -0.387266, 0.921968, 0, 4.21299, 8.2705 )
projection = 0
fov = 60.0
near = 0.1
far = 100.0
keep_aspect = 1
current = false
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
script/script = ExtResource( 2 )
MouseSensitivity = null

[node name="RayCast" type="RayCast" parent="Player"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.178134, 0 )
enabled = false
cast_to = Vector3( 0, -1, 0 )
layer_mask = 1
type_mask = 15

[node name="RayCast1" type="RayCast" parent="Player"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.96172, -0.178134, -0.937849 )
enabled = false
cast_to = Vector3( 0, -1, 0 )
layer_mask = 1
type_mask = 15

[node name="RayCast2" type="RayCast" parent="Player"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.974348, -0.178134, 0.976937 )
enabled = false
cast_to = Vector3( 0, -1, 0 )
layer_mask = 1
type_mask = 15

[node name="RayCast3" type="RayCast" parent="Player"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.961411, -0.178134, 0.987846 )
enabled = false
cast_to = Vector3( 0, -1, 0 )
layer_mask = 1
type_mask = 15

[node name="RayCast4" type="RayCast" parent="Player"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.951797, -0.178134, -0.948894 )
enabled = false
cast_to = Vector3( 0, -1, 0 )
layer_mask = 1
type_mask = 15


